despatma/tests/fail/dependency_container/impl_trait_but_requesting_concrete.stderr
error: Requested type is a concrete type, but the registered type is: `impl DAL`

         = help: change this to `dal: impl DAL`

  --> tests/fail/dependency_container/impl_trait_but_requesting_concrete.rs:32:39
   |
32 |     fn service(&self, config: Config, dal: PostgresDAL) -> Service<PostgresDAL> {
   |                                       ^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `DependencyContainer`
  --> tests/fail/dependency_container/impl_trait_but_requesting_concrete.rs:38:21
   |
38 |     let container = DependencyContainer::new();
   |                     ^^^^^^^^^^^^^^^^^^^ use of undeclared type `DependencyContainer`
